--- a/src/style/app/base.css
+++ b/src/style/app/base.css
@@ -535,7 +535,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  /* background: url("../img/i.jpg") center center no-repeat; */
   background-size: cover;
   min-height: 500px;
 }
@@ -697,7 +697,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  /* background: url("../img/testimonials-bg.jpg") no-repeat; */
   background-position: center center;
   background-size: cover;
   position: relative;
