--- a/src/style/app/base.css
+++ b/src/style/app/base.css
@@ -1,4 +1,5 @@
 /**
+* Customized:
 * Template Name: Laura - v2.0.0
 * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
 * Author: BootstrapMade.com
