--- a/src/style/app/base.css
+++ b/src/style/app/base.css
@@ -1151,6 +1151,14 @@ section {
   vertical-align: middle;
   display: table-cell;
 }
+@media (max-width: 575) {
+  .skills .info-box {
+    color: #444444;
+    text-align: center;
+    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+    padding: 30px 0 30px 0;
+  }
+}
 /*--------------------------------------------------------------
 # Contact Me
 --------------------------------------------------------------*/
